[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/SoundBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/Fonts/Paladino.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/UI/Text.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/displace.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/Transition_Effect.gd" type="Script" id=6]
[ext_resource path="res://assets/UI/Scalpel_UI.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/Can_UI.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/RedKey_UI.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/Container.png" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff : hint_range(0,1.0);
uniform sampler2D filter : hint_albedo;

void fragment()
{
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 tex = texture(filter, SCREEN_UV);
	
	if(tex.r < cutoff)
	{
		COLOR.rgb = vec3(0.0);
	}
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/cutoff = 0.0
shader_param/filter = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SoundBar" parent="." instance=ExtResource( 2 )]
rect_scale = Vector2( 0.7, 0.7 )

[node name="Panel" type="Panel" parent="."]
margin_left = 45.839
margin_top = 95.0
margin_right = 967.839
margin_bottom = 219.999

[node name="Text" type="Label" parent="Panel"]
margin_left = 14.0
margin_top = 11.0
margin_right = 916.0
margin_bottom = 178.0
custom_fonts/font = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Transition_Effect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.50732
margin_bottom = -1.50732
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )

[node name="tween" type="Tween" parent="."]

[node name="Scalpel_UI" type="Sprite" parent="."]
position = Vector2( 925.455, 48.709 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Can_UI" type="Sprite" parent="."]
position = Vector2( 925.455, 48.7093 )
texture = ExtResource( 8 )

[node name="RedKey_UI" type="Sprite" parent="."]
position = Vector2( 825.542, 48.7956 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Container" type="Sprite" parent="."]
position = Vector2( 925.55, 46.7254 )
texture = ExtResource( 10 )

[node name="Container2" type="Sprite" parent="."]
position = Vector2( 825.375, 47.3888 )
texture = ExtResource( 10 )
